--- a/Du_anTN/HTML/manager.html
+++ b/Du_anTN/HTML/manager.html
@@ -156,9 +156,9 @@
 				<div class="content">
 					<div class="menu-detail"><!-- Navs Tabs-->
 								<ul class="nav nav-tabs">
-								    <li class="active"><a data-toggle="tab" href="#menu1">THÔNG TIN CHUNG</a></li>
-								    <li><a data-toggle="tab" href="#menu2">MÔ TẢ CHI TIẾT</a></li>
-								    <li><a data-toggle="tab" href="#menu3">HÌNH ẢNH</a></li>
+								    <li class="active"><a data-toggle="tab" href="#menu1">THÔNG TIN CÁ NHÂN</a></li>
+								    <li><a data-toggle="tab" href="#menu2">TIN ĐÃ ĐĂNG</a></li>
+								    <li><a data-toggle="tab" href="#menu3">TÀI KHOẢN</a></li>
 								    <li><a data-toggle="tab" href="#menu4">VỊ TRÍ</a></li>
 								</ul>
 							<!-- Content navs tabs-->
