--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -16,8 +16,8 @@
 		<ul class="list-banner">
 			<li class="list item1">
 				<div class="list-text">
-					<img src="../IMG/logo1.png">
-					<p class="name">LANDLORD &#38; TENANT</p>
+					<img src="../IMG/logo-option2png.png">
+					<p class="name">TÌM PHÒNG CÙNG BẠN</p>
 					<p class="slogan">Sứ mệnh của chúng tôi là mang đến sự hợp tác thoải mái giữa người cho thuê nhà và người đi thuê, vì lợi ích của cả hai bên.</p>
 				</div>
 			</li>
@@ -106,9 +106,9 @@
 							<li class="item"><a href="#"><i class="fa fa-binoculars"></i></br>Giúp tôi</a></li>
 							<li class="item"><a href="#"><i class="fa fa-users"></i></br>Ở ghép</a></li>
 							<li class="item"><a href="#"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
-							<li class="item"><a href="#"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
-							<li class="item"><a href="#"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
-							<li class="item"><a href="#"><i class="fa fa-book"></i></br>Quản lý</a></li>
+							<li class="item"><a href="../HTML/support.html" target="_blank"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
+							<li class="item"><a href="../HTML/post2.html" target="_blank"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
+							<li class="item"><a href="../HTML/manager.html" target="_blank"><i class="fa fa-book"></i></br>Quản lý</a></li>
 							<li class="item"><a href="#"><i class="fa fa-money"></i></br>Nạp tiền</a></li>
 							<div class="sign">
 								<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><i class="fa fa-sign-in"></i><span>Đăng nhập</span></button>
@@ -231,7 +231,7 @@
 					</div>
 					<div id="content-right">
 						<div class="content-right1">
-							<div class="item-cr1 title"><a href=""><p>NHÀ TÔI CHÍNH CHỦ CHO THUÊ PHÒNG TRỌ TẠI SỐ 131A, NGÕ 105/20 ĐƯỜNG DOÃN KẾ THIỆN, MAI DỊCH, QUẬN CẦU GIẤY</p></a></div>
+							<div class="item-cr1 title"><a data-toggle="collapse" data-target="#content-detail"><p>NHÀ TÔI CHÍNH CHỦ CHO THUÊ PHÒNG TRỌ TẠI SỐ 131A, NGÕ 105/20 ĐƯỜNG DOÃN KẾ THIỆN, MAI DỊCH, QUẬN CẦU GIẤY</p></a></div>
 							<div class="item-cr1 summarize-desc"><p>Nhà tôi chính chủ còn 1 phòng trống cần cho thuê gấp vào ở được ngay, tại địa chỉ số 131A ngõ 105/20 đường Doãn Kế Thiện, Mai Dịch, cách nhà nghỉ Thanh Trà 2: 10m.</p>
 							</div>
 							<div class="item-cr1 local"><p>Khu vực: Huyện Từ Liêm, Hà Nội</p></div>
