--- a/Du_anTN/HTML/start-page.html
+++ b/Du_anTN/HTML/start-page.html
@@ -14,8 +14,11 @@
 <body>
 	<div class="wrapper">
 		<div class="content-left">
-			<div class="slogan">
-				<img class="item" src="../IMG/png">
+			<div class="slogan-img">
+				<img class="item" src="../IMG/slogan.png">
+			</div>
+			<div class="slogan-text">
+				<img class="item" src="../IMG/slogan-text.png">
 			</div>
 			<div class="logo1">
 				<img class="item" src="../IMG/logo-option2png.png">
@@ -42,5 +45,8 @@
 		</div>
 		<div class="clear"></div>
 	</div>
+	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
+	<script src="../JAVASCRIPT/home.js"></script>
+	<script src="../../bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
