--- a/Du_anTN/HTML/news.html
+++ b/Du_anTN/HTML/news.html
@@ -59,7 +59,7 @@
 					</div>
 					<div class="menu-1024">
 						<ul>
-							<li class="item"><a href="#"><i class="fa fa-home"></i></br>Trang chủ</a></li>
+							<li class="item"><a href="../HTML/home.html"><i class="fa fa-home"></i></br>Trang chủ</a></li>
 							<li class="item"><a href="#"><i class="fa fa-user-secret"></i></br>Cho thuê</a>
 								<ul class="sub-menu">
 									<li class="sub-item"><a href=""><i class="fa fa-bolt"></i>Phòng cho thuê</a></li>
@@ -71,9 +71,9 @@
 							<li class="item"><a href="#"><i class="fa fa-binoculars"></i></br>Giúp tôi</a></li>
 							<li class="item"><a href="#"><i class="fa fa-users"></i></br>Ở ghép</a></li>
 							<li class="item"><a href="#"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
-							<li class="item"><a href="../HTML/support.html" target="_blank"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
-							<li class="item"><a href="../HTML/post2.html" target="_blank"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
-							<li class="item"><a href="../HTML/manager.html" target="_blank"><i class="fa fa-book"></i></br>Quản lý</a></li>
+							<li class="item"><a href="../HTML/support.html"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
+							<li class="item"><a href="../HTML/post2.html"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
+							<li class="item"><a href="../HTML/manager.html"><i class="fa fa-book"></i></br>Quản lý</a></li>
 							<li class="item"><a href="#"><i class="fa fa-money"></i></br>Nạp tiền</a></li>
 							<div class="sign">
 								<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><i class="fa fa-sign-in"></i><span>Đăng nhập</span></button>
@@ -156,6 +156,30 @@
 				<div class="content">
 					<div class="news-content">
 						<div class="image-new">
+							<img src="../IMG/new1.jpg">
+						</div>
+						<div class="new">
+							<div class="new-title">
+								<h4 data-toggle="collapse" data-target="#new-content-detail2"><b>Những điều tân sinh viên cần biết khi thuê phòng trọ</b></h4>
+								<div class="des-new">Đối với các bạn tân sinh viên mới chân ướt chân ráo lên thành phố, việc tìm nhà trọ luôn là một thách thức lớn, làm sao có thể tìm được chỗ ở tốt để yên tâm học tập với mức chi phí có thể chấp nhận được...</div>
+								<button class="btn-new" data-toggle="collapse" data-target="#new-content-detail2"><i>Xem chi tiết</i></button>
+							</div>
+						</div>
+						<div class="clear"></div>
+						<div class="collapse" id="new-content-detail2">
+							<h4>Đối với các bạn tân sinh viên mới chân ướt chân ráo lên thành phố, việc tìm nhà trọ luôn là một thách thức lớn, làm sao có thể tìm được chỗ ở tốt để yên tâm học tập với mức chi phí có thể chấp nhận được. Một số bạn có người thân quen hoặc anh chị hiện đang sinh sống ở thành phố đó thì việc tìm chỗ ở sẽ thuận lợi hơn đôi chút, còn lại phần đông các tân sinh viên phải “tự thân vận động” đi tìm phòng trong các khu nhà trọ sinh viên. Để giúp các Tân sinh viên giảm bớt khó khăn trong việc tìm nhà trọ, sau đây chúng tôi sẽ cung cấp cho các bạn một số kinh nghiệm thuê phòng trọ để sinh viên tìm được nơi ở trọ hợp ý, chất lượng và đảm bảo an ninh.</h4>
+						
+							<p><b>1. Cần xác định trước khu vực thuê và giá thuê</b></p>
+							<p>Điều đầu tiên các bạn cần làm trước khi bắt đầu công cuộc đi tìm phòng trọ, đó là xác định xem mình sẽ thuê nhà ở khu vực nào và mức giá tầm khoảng bao nhiêu.</br>
+							Về khu vực thuê, một lựa chọn tối ưu cho các bạn tân sinh viên đó là thuê gần trường, tốt nhất là trong vòng bán kính 1-2km xung quanh trường. Theo đó, các bạn sẽ tiết kiệm được thời gian, công sức và chi phí đi lại. Ví dụ, nếu bạn cách trường chừng 6-7km, bạn sẽ phải dậy thật sớm bắt 1 hoặc 2 tuyến xe buýt hoặc tự đi xe đến trường. Trong khi các bạn ở gần trường vừa tiết kiệm được cả tiếng đồng hồ đó để làm các việc khác vừa không phải chen chúc trên những chuyến xe buýt luôn “chật cứng” vào mỗi giờ cao điểm sáng – chiều. Hơn nữa với các bạn yêu thích hoạt động ngoại khóa, thích lên thư viện, thích học ở giảng đường, v.v. thì việc ở gần trường sẽ càng tạo điều kiện cho các bạn theo đuổi sở thích, đam mê của mình.</p>
+							<p><b>2. Tìm hiểu thông tin và xem xét thật kỹ phòng trọ bạn sắp thuê</b></p>
+							<p>Khi bạn có thông tin về một phòng trọ nào đó, bất kể từ nguồn nào: do người thân quen giới thiệu, từ các trung tâm trợ giúp của Đoàn Thanh niên trường, hay từ các tin rao vặt bất động sản hay cho thuê nhà trọ giá rẻ trên mạng, bạn nên hỏi trực tiếp người đã giới thiệu cho mình hoặc gọi điện trước theo số điện thoại được cung cấp để hỏi chủ nhà một số thông tin cần thiết. Giá phòng, giá điện nước, phí phát sinh, diện tích, loại phòng, số người được ở, quy định về giờ giấc là một số thông tin cần thiết bạn nên hỏi trước. Rất nhiều trường hợp khi đến xem phòng, chất lượng, không gian phòng ở rất tốt nhưng lại quy định về trước 9h tối và không được phép cho bạn bè đến chơi. Nếu bạn không tuân thủ được những quy định ngặt nghèo này, vậy là bạn đã lãng phí thời gian và công sức đến xem phòng.</p>
+						</div>
+					</div>
+
+
+					<div class="news-content">
+						<div class="image-new">
 							<img src="../IMG/buyt.jpg">
 						</div>
 						<div class="new">
@@ -167,7 +191,14 @@
 						</div>
 						<div class="clear"></div>
 						<div class="collapse" id="new-content-detail">
-							<h1>Nội dung tin tức chi tiết</h1>
+							<h4>Sử dụng phương tiện giao thông công cộng để giảm ùn tắc giao thông....</h4>
+							<p>Để thuận tiện cho việc đi lại của các bạn hãy tìm hiểu lộ trình các tuyến xe buýt gần nơi bạn ở <i>(Truy cập theo các đường link dưới đây).</i></p>
+							<p>Xe buýt Hà Nội</p>
+							<a href="http://www.transerco.vn/default.aspx?pageid=253" target="_blank">http://www.transerco.vn</a>
+							<p>Xe buýt Tp. Hồ Chí Minh</p>
+							<a href="http://buyttphcm.com.vn/Route" target="_blank">http://buyttphcm.com.vn</a>
+							<p>Xe buýt Tp. Đà Nẵng</p>
+							<a href="http://ecobus.danang.gov.vn/web/guest/homepublish" target="_blank">http://ecobus.danang.gov.vn</a>
 						</div>
 					</div>
 
