--- a/Du_anTN/HTML/support.html
+++ b/Du_anTN/HTML/support.html
@@ -60,7 +60,7 @@
 					</div>
 					<div class="menu-1024">
 						<ul>
-							<li class="item"><a href="#"><i class="fa fa-home"></i></br>Trang chủ</a></li>
+							<li class="item"><a href="../HTML/home.html"><i class="fa fa-home"></i></br>Trang chủ</a></li>
 							<li class="item"><a href="#"><i class="fa fa-user-secret"></i></br>Cho thuê</a>
 								<ul class="sub-menu">
 									<li class="sub-item"><a href=""><i class="fa fa-bolt"></i>Phòng cho thuê</a></li>
@@ -71,10 +71,10 @@
 							</li>
 							<li class="item"><a href="#"><i class="fa fa-binoculars"></i></br>Giúp tôi</a></li>
 							<li class="item"><a href="#"><i class="fa fa-users"></i></br>Ở ghép</a></li>
-							<li class="item"><a href="#"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
-							<li class="item"><a href="#"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
-							<li class="item"><a href="#"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
-							<li class="item"><a href="#"><i class="fa fa-book"></i></br>Quản lý</a></li>
+							<li class="item"><a href="../HTML/news.html"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
+							<li class="item"><a href="../HTML/support.html"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
+							<li class="item"><a href="../HTML/post2.html"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
+							<li class="item"><a href="../HTML/manager.html"><i class="fa fa-book"></i></br>Quản lý</a></li>
 							<li class="item"><a href="#"><i class="fa fa-money"></i></br>Nạp tiền</a></li>
 							<div class="sign">
 								<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><i class="fa fa-sign-in"></i><span>Đăng nhập</span></button>
