--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -105,10 +105,10 @@
 							</li>
 							<li class="item"><a href="#"><i class="fa fa-binoculars"></i></br>Giúp tôi</a></li>
 							<li class="item"><a href="#"><i class="fa fa-users"></i></br>Ở ghép</a></li>
-							<li class="item"><a href="#"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
-							<li class="item"><a href="../HTML/support.html" target="_blank"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
-							<li class="item"><a href="../HTML/post2.html" target="_blank"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
-							<li class="item"><a href="../HTML/manager.html" target="_blank"><i class="fa fa-book"></i></br>Quản lý</a></li>
+							<li class="item"><a href="../HTML/news.html"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
+							<li class="item"><a href="../HTML/support.html"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
+							<li class="item"><a href="../HTML/post2.html"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
+							<li class="item"><a href="../HTML/manager.html"><i class="fa fa-book"></i></br>Quản lý</a></li>
 							<li class="item"><a href="#"><i class="fa fa-money"></i></br>Nạp tiền</a></li>
 							<div class="sign">
 								<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><i class="fa fa-sign-in"></i><span>Đăng nhập</span></button>
