--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -121,11 +121,10 @@
 							        <div class="modal-body">
 										<form action="home.html" id="sign-in"><!--Login form-->
 								            <div class="container form">
-								              <label><b>Tên đăng nhập</b></label>
+								              <label><b>Tên đăng nhập:</b></label>
 								              <input type="text" id="uname" placeholder="Email hoặc số điện thoại" name="uname" required><span style="color:red" class="error1"></span>
-								              <label><b>Mật khẩu</b></label>
+								              <label><b>Mật khẩu:</b></label>
 								              <input type="password" id="psw" placeholder="Mật khẩu đăng nhập" name="psw" required><span style="color:red" class="error2"></span>
-
 								              <button class="login" type="submit">Login</button>
 								              <input type="checkbox" checked="checked"> Remember me
 								            </div>
@@ -163,16 +162,18 @@
 							          <h4 class="modal-title">Đăng ký tài khoản!</h4>
 							        </div>
 							        <div class="modal-body">
-							        	<form action="action_page" id="login-form">
+							        	<form action="signup-success.html" id="login-form">
 							            	<div class="container form">
-							            		<label><b>Tên tài khoản</b></label>
-							            		<input type="text" placeholder="Tên của bạn" name="uname" required>
-												<label><b>Số điện thoại</b></label>
-												<input type="text" placeholder="Số điện thoại" name="uname" required>
-							           			<label><b>Mật khẩu</b></label>
-							            		<input type="password" id="psw1" placeholder="Mật khẩu" name="psw" required>
-							            		<label><b>Nhập lại mật khẩu</b></label>
-							            		<input type="password" id="psw2" placeholder="Nhập lại mật khẩu" name="psw" required><span style="color:red" class="error4"></span>
+							            		<label><b>Họ tên:</b></label>
+							            		<input type="text" placeholder="Họ tên bạn" name="name" required>
+												<label><b>Số điện thoại:</b></label>
+												<input type="text" placeholder="Số điện thoại của bạn" name="mobile" required>
+												<label><b>Email:</b></label>
+												<input type="email" placeholder="Email của bạn" name="email" required>
+							           			<label><b>Mật khẩu:</b></label>
+							            		<input type="password" id="psw1" placeholder="Mật khẩu" name="pass" required>
+							            		<label><b>Nhập lại mật khẩu:</b></label>
+							            		<input type="password" id="psw2" placeholder="Nhập lại mật khẩu" name="pass" required><span style="color:red" class="error4"></span>
 							            		<button class="login" type="submit">Đăng ký</button> 
 							            	</div>   
 							       		</form>
@@ -245,7 +246,7 @@
 						</div>
 						<ul class="face2">
 							<li class="f-icon"><i class="fa fa-facebook"></i></li>
-							<li class="f-share left"><a href=""><img src="../IMG/f-share1.jpg"></a></li>
+							<li class="f-share left"><a href="https://facebook.com" target="_blank"><img src="../IMG/f-share1.jpg"></a></li>
 							<li class="f-share right"><a href=""><img src="../IMG/f-share.png"></a></li>
 							<div class="clear"></div>
 						</ul>
