--- a/Du_anTN/HTML/start-page.html
+++ b/Du_anTN/HTML/start-page.html
@@ -42,6 +42,21 @@
 		</div>
 		<div class="content-right">
 			<img src="../IMG/map.png">
+			<div class="locale hn">
+				<div class="icon-locale">1</div>
+				<div class="locale-text">Hà Nội</div>
+				<div class="clear"></div>
+			</div>
+			<div class="locale dn">
+				<div class="icon-locale">2</div>
+				<div class="locale-text">Đà Nẵng</div>
+				<div class="clear"></div>
+			</div>
+			<div class="locale hcm">
+				<div class="icon-locale">3</div>
+				<div class="locale-text">Tp. Hồ Chí Minh</div>
+				<div class="clear"></div>
+			</div>
 		</div>
 		<div class="clear"></div>
 	</div>
