--- a/Du_anTN/HTML/news.html
+++ b/Du_anTN/HTML/news.html
@@ -17,12 +17,7 @@
 		<div class="container">
 			<div class="header">
 				<div class="face"><i class="fa fa-facebook-square"></i></div>
-				<ul class="face2">
-							<li class="f-icon"><i class="fa fa-facebook"></i></li>
-							<li class="f-share left"><a href=""><img src="../IMG/f-share1.jpg"></a></li>
-							<li class="f-share right"><a href=""><img src="../IMG/f-share.png"></a></li>
-							<div class="clear"></div>
-						</ul>
+				
 
 				<div class="main-menu">
 					<div class="menu-mobile">
@@ -153,7 +148,7 @@
 				</div>		
 			</div>
 			<div class="wrap-content">
-				<div class="content">
+				<div class="content" style="border: none;">
 					<div class="news-content">
 						<div class="image-new">
 							<img src="../IMG/new1.jpg">
