--- a/Du_anTN/HTML/start-page.html
+++ b/Du_anTN/HTML/start-page.html
@@ -24,18 +24,23 @@
 				<img class="item" src="../IMG/logo-option2png.png">
 			</div>
 			<div class="logo2">
+				<img class="think1" src="../IMG/think1.png">
 				<img class="item" src="../IMG/student.png">
 			</div>
 			<div class="logo3">
+				<img class="think2" src="../IMG/think2.png">
 				<img class="item" src="../IMG/kd.png">
 			</div>
 			<div class="logo4">
+				<img class="think3" src="../IMG/think5.png">
 				<img class="item" src="../IMG/landlord.png">
 			</div>
 			<div class="logo5">
+				<img class="think4" src="../IMG/think3.png">
 				<img class="item" src="../IMG/family.png">
 			</div>
 			<div class="logo6">
+				<img class="think5" src="../IMG/think4.png">
 				<img class="item" src="../IMG/flat1.png">
 			</div>
 			
@@ -47,16 +52,53 @@
 				<div class="locale-text">Hà Nội</div>
 				<div class="clear"></div>
 			</div>
+			<div class="container-popover first">
+				<div class="ppover">
+	                <div class="triangle_border"></div>
+	                <ul>
+	                	<li class="text">HÀ NỘI</li>
+	                	<li>
+	                		<img src="../IMG/hn.jpg">
+	                	</li>
+	                	<li class="view-more"><div>Tìm phòng</div></li> 
+	                </ul>
+	            </div>
+            </div>
 			<div class="locale dn">
 				<div class="icon-locale">2</div>
 				<div class="locale-text">Đà Nẵng</div>
 				<div class="clear"></div>
 			</div>
+			<div class="container-popover second">
+				<div class="ppover">
+	                <div class="triangle_border"></div>
+	                <ul>
+	                	<li class="text">ĐÀ NẴNG</li>
+	                	<li>
+	                		<img src="../IMG/dn.jpg">
+	                	</li>
+	                	<li class="view-more"><div>Tìm phòng</div></li> 
+	                </ul>
+	            </div>
+            </div>
 			<div class="locale hcm">
 				<div class="icon-locale">3</div>
 				<div class="locale-text">Tp. Hồ Chí Minh</div>
 				<div class="clear"></div>
 			</div>
+			<div class="container-popover third">
+				<div class="ppover">
+	                <div class="triangle_border"></div>
+	                <ul>
+	                	<li class="text">HỒ CHÍ MINH</li>
+	                	<li>
+	                		<img src="../IMG/hcm.jpg">
+	                	</li>
+	                	<li class="view-more"><div>Tìm phòng</div></li> 
+	                </ul>
+	            </div>
+            </div>
+			
 		</div>
 		<div class="clear"></div>
 	</div>
