--- a/Du_anTN/HTML/start-page.html
+++ b/Du_anTN/HTML/start-page.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="../CSS/start-page.css">
 	<link rel="stylesheet" type="text/css" href="../css2/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../../materialize/css/materialize.min.css">
 	<link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap-theme.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -100,10 +101,16 @@
             </div>
 			
 		</div>
+		<ul class="nav-bar">
+			<li class="ico home"><img src="../IMG/home.png"></li>
+			<li class="ico about"><img src="../IMG/about.png"></li>
+			<li class="ico face"><img src="../IMG/face.png"></li>
+		</ul>
 		<div class="clear"></div>
 	</div>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
 	<script src="../JAVASCRIPT/home.js"></script>
 	<script src="../../bootstrap/js/bootstrap.min.js"></script>
+	<script src="../../materialize/js/materialize.min.js"></script>
 </body>
 </html>
