--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="../CSS/home.css">
 	<link rel="stylesheet" type="text/css" href="../css2/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../../materialize/css/materialize.min.css">
 	<link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap-theme.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -464,5 +465,6 @@
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
 	<script src="../JAVASCRIPT/home.js"></script>
 	<script src="../../bootstrap/js/bootstrap.min.js"></script>
+	<script src="../../materialize/js/materialize.min.js"></script>
 </body>
 </html>
