--- a/Du_anTN/HTML/manager.html
+++ b/Du_anTN/HTML/manager.html
@@ -188,10 +188,14 @@
 								</div>
 							</div>
 							<div class="avatar">
-								<div class="image">
-									<img src="../IMG/avatar.jpg">
+								<div class="image" id="fileDisplayArea">
+									
 								</div></br>
-							    <input type="file" accept="image/*;capture=camera">
+							    <div>
+									Chọn ảnh đại diện: 
+									<input type="file" id="fileInput">
+								</div>
+								
 							</div>
 							<input type="hidden" name="action" value="update_user_info">
 							<button type="submit" class="btn btn-primary" id="update">Lưu</button>
@@ -226,6 +230,30 @@
 		<img class="top-footer" src="../IMG/footer.png">
 		<div class="footer-content"></div>
 	</div>
+	<script type="text/javascript">
+	/********** Load ảnh đại diện trang Manager  **********/
+			window.onload = function() {
+			var fileInput = document.getElementById('fileInput');
+			var fileDisplayArea = document.getElementById('fileDisplayArea');
+			fileInput.addEventListener('change', function(e) {
+				var file = fileInput.files[0];
+				var imageType = /image.*/;
+				if (file.type.match(imageType)) {
+					var reader = new FileReader();
+					reader.onload = function(e) {
+						fileDisplayArea.innerHTML = "";
+						var img = new Image();
+						img.src = reader.result;
+						fileDisplayArea.appendChild(img);
+					}
+					reader.readAsDataURL(file);	
+				} else {
+					fileDisplayArea.innerHTML = "File not supported!"
+				}
+			});
+	}
+
+	</script>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
 	<script src="../JAVASCRIPT/home.js"></script>
 	<script src="../JAVASCRIPT/sign-up.js"></script>
