--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -107,7 +107,7 @@
 							<li class="item"><a href="#"><i class="fa fa-money"></i></br>Nạp tiền</a></li>
 							<div class="sign">
 								<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><i class="fa fa-sign-in"></i><span>Đăng nhập</span></button>
-								<! Form đăng nhập>
+								<!-- Form đăng nhập-->
 							<!-- Modal -->
 							  <div class="modal fade" id="myModal" role="dialog">
 							    <div class="modal-dialog">
@@ -149,7 +149,7 @@
 							      
 							    </div>
 							  </div>
-								<! Form đăng ký>
+								<!-- Form đăng ký-->
 								<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2"><i class="fa fa-pencil"></i><span>Đăng ký</span></button>
 								<!-- Modal -->
 							  <div class="modal fade" id="myModal2" role="dialog">
@@ -224,17 +224,17 @@
 						    <!-- Wrapper for slides -->
 						    <div class="carousel-inner" role="listbox">
 						      <div class="item active">
-						        <img src="../IMG/1.jpg" alt="anh1" width="460" height="345">
+						        <img src="../IMG/img-p1/1.jpg" alt="anh1" width="460" height="345">
 						      </div>
 
 						      <div class="item">
-						        <img src="../IMG/2.jpg" alt="anh2" width="460" height="345">
+						        <img src="../IMG/img-p1/2.jpg" alt="anh2" width="460" height="345">
 						      </div>
 						      <div class="item">
-						        <img src="../IMG/1.jpg" alt="anh3" width="460" height="345">
+						        <img src="../IMG/img-p1/3.jpg" alt="anh3" width="460" height="345">
 						      </div>
 								<div class="item">
-							        <img src="../IMG/2.jpg" alt="anh3" width="460" height="345">
+							        <img src="../IMG/img-p1/4.jpg" alt="anh3" width="460" height="345">
 							    </div>
 						      
 						    </div>
@@ -350,16 +350,16 @@
 											    <!-- Wrapper for slides -->
 											    <div class="carousel-inner" role="listbox">
 											      <div class="item active">
-											        <img src="../IMG/1.jpg" alt="anh1" width="100%">
+											        <img src="../IMG/img-p1/1.jpg" alt="anh1" width="100%" style="height: 400px !important">
 											      </div>
 											      <div class="item">
-											        <img src="../IMG/2.jpg" alt="anh2" width="100%" >
+											        <img src="../IMG/img-p1/2.jpg" alt="anh2" width="100%" style="height: 400px !important">
 											      </div>
 											      <div class="item">
-											        <img src="../IMG/1.jpg" alt="anh3" width="100%">
+											        <img src="../IMG/img-p1/3.jpg" alt="anh3" width="100%" style="height: 400px !important">
 											      </div>
 													<div class="item">
-												        <img src="../IMG/2.jpg" alt="anh3" width="100%" >
+												        <img src="../IMG/img-p1/4.jpg" alt="anh4" width="100%" style="height: 400px !important">
 												    </div>
 											    </div>
 										   		 <!-- Left and right controls -->
@@ -376,7 +376,7 @@
 									</div>
 								    <div id="menu4" class="tab-pane fade">
 									    <div id="detail-item4" class="des-detail-content">
-											<h4>BẢN ĐỒ</h4>
+											<div id="googleMap" style="width:100%;height:400px;"></div>
 										</div>
 								    </div>
 								</div>	    
@@ -462,6 +462,16 @@
 		<img class="top-footer" src="../IMG/footer.png">
 		<div class="footer-content"></div>
 	</div>
+	<script>
+		function myMap() {
+		var mapProp= {
+		    center:new google.maps.LatLng(21.028511, 105.804817),
+		    zoom:16,
+		};
+		var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+		}
+		</script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
 	<script src="../JAVASCRIPT/home.js"></script>
 	<script src="../../bootstrap/js/bootstrap.min.js"></script>
