--- a/Du_anTN/HTML/manager.html
+++ b/Du_anTN/HTML/manager.html
@@ -76,7 +76,7 @@
 								</div>
 								<div class="info-user">
 									<p>Xin chào: <b style="color: red">Trịnh Công Trình</b></p>
-									<p>Bạn có: <i class="fa fa-money" style="color: red">10.000đ</i> tài khoản</p>
+									<p>Hạng thành viên: <b style="color: red">VIP</b></p>
 									<button class="manager-user"><a href="../HTML/manager.html">Quản lý</a></button>
 									<button class="sign-out">Đăng xuất</button>
 								</div>
