--- a/Du_anTN/HTML/search-nearby.html
+++ b/Du_anTN/HTML/search-nearby.html
@@ -150,7 +150,9 @@
 			</div>
 			<div class="wrap-content">
 				<!--Tìm quanh đây-->
-				<div id="mapholder"></div>
+				<div class="map-search">
+					<div id="mapholder"></div>
+				</div>
 
 				<div class="content">
 					<div id="content-left">
@@ -397,15 +399,15 @@
 		<img class="top-footer" src="../IMG/footer.png">
 		<div class="footer-content"></div>
 	</div>
-	<script src="https://maps.google.com/maps/api/js?&key=AIzaSyCDUYFDaXnS0a217T0rP3xNrnqxuErZsD4"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDUYFDaXnS0a217T0rP3xNrnqxuErZsD4&callback=myMap"></script>
 	<script>
 		window.onload = function myMap() {
-		var mapProp= {
-		    center:new google.maps.LatLng(21.028511, 105.804817),
-		    zoom:16,
-		};
-		var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-		var marker = new google.maps.Marker({position:mapProp.center});marker.setMap(map);
+			var mapProp= {
+			    center:new google.maps.LatLng(21.028511, 105.804817),
+			    zoom:16,
+			};
+			var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+			var marker = new google.maps.Marker({position:mapProp.center});marker.setMap(map);
 		}
 		
 	</script>
